--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <link rel="shortcut icon" href="favicon.ico" />
-  <title>Annual Reports - Neal</title>
-  <link href="http://fonts.googleapis.com/css?family=Mako" rel="stylesheet" type="text/css" />
-  <script type="text/javascript">
+<link rel="shortcut icon" href="favicon.ico"/>
+<title>Annual Reports - Neal</title>
+<link href="http://fonts.googleapis.com/css?family=Mako" rel="stylesheet" type="text/css"/>
+<script type="text/javascript">
 //<![CDATA[
   function addInputSubmitEvent(form, input) {
     input.onkeydown = function(e) {
@@ -14,32 +14,25 @@
         }
     };
   }
-
   window.onload = function() {
     var forms = document.getElementsByTagName('form');
-
     for (var i=0;i < forms.length;i++) {
         var inputs = forms[i].getElementsByTagName('input');
-
         for (var j=0;j < inputs.length;j++)
             addInputSubmitEvent(forms[i], inputs[j]);
     }
   };
   //]]>
   </script>
-  <style type="text/css">
+<style type="text/css">
 /*<![CDATA[*/
-
-
                 *:focus{
                         outline:none; /* Prevents blue border in Webkit */
                 }
-
                 body {
                         font-family: 'Mako', Helvetica, Arial, sans-serif; /*  */
                         background-image:url('wood.jpg');
                 }
-
                 h1 {
                         font-family: 'Mako', Helvetica, Arial, sans-serif;
                         font-size: 29px;
@@ -50,7 +43,6 @@
                         text-align: center;
                         text-shadow: 2px 2px 8px #000000;
                 }
-
                 h2 {
                         font-family: 'Mako', Helvetica, Arial, sans-serif;
                         font-size: 20px;
@@ -61,31 +53,25 @@
                         text-align: center;
                         text-shadow: 2px 2px 8px #000000;
                 }
-
                 form {
                         width:300px;
                         margin: 20px auto;
                         text-align: center;
                 }
-
                 p {
                         line-height: 1.6;
                 }
-                
                 iframe{
                         font-family: "'Mako', Helvetica Neue", 'Mako', Helvetica, Arial, sans-serif;
                         sbackground-color:#fff;
                         border:0px solid #ccc;
                         font-size:20px;
                         min-height:30px;
-
                         margin-bottom:16px;
                         margin-top:8px;
-
                         -webkit-border-radius:5px;
                         -moz-border-radius:5px;
                         border-radius:5px;
-
                         -webkit-transition: all 0.5s ease-in-out;
                         -moz-transition: all 0.5s ease-in-out;
                         transition: all 0.5s ease-in-out;
@@ -100,52 +86,42 @@
                         display:block;
                         margin-bottom:16px;
                         margin-top:8px;
-
                         -webkit-border-radius:5px;
                         -moz-border-radius:5px;
                         border-radius:5px;
-
                         -webkit-transition: all 0.5s ease-in-out;
                         -moz-transition: all 0.5s ease-in-out;
                         transition: all 0.5s ease-in-out;
                 }
-
                 textarea {
                                 min-height:200px;
                 }
-
                 input:focus, textarea:focus {
                         -webkit-box-shadow:0 0 25px #ccc;
                         -moz-box-shadow:0 0 25px #ccc;
                         box-shadow:0 0 25px #ccc;
-
                         -webkit-transform: scale(1.05);
                         -moz-transform: scale(1.05);
                         transform: scale(1.05);
                 }
-
                 /* The interesting bit */
-
                 input:not(:focus), textarea:not(:focus) {
                         opacity:0.5;
                 }
-
                 input[type=submit] {
                         padding:10px;
                         background:none;
                         opacity:1.0;
                 }
-
   /*]]>*/
-  </style>
-  <script type="text/javascript">
+</style>
+<script type="text/javascript">
 //<![CDATA[
   function get(eid) {
   var d = document;
   var r = d.getElementById(eid);
   return r;
   }
-
   function loadUrl(){
   var url = "http://docs.google.com/viewer?url=http://www.annualreports.com/HostedData/AnnualReports/PDFArchive/" + get('url').value + get('url2').value + ".pdf" + "&embedded=true"
   get('urlView').src = url;
@@ -153,25 +129,19 @@
   //]]>
   </script>
 </head>
-
 <body style="background-color:transparent">
-  <h1 align="center">Annual Report Viewer</h1>
-
-  <div align="center">
-    <form align="center">
-      <input onchange="javascript:this.value=this.value.toLowerCase();" type="text" id=
-      "url" value="Ticker" /> <input type="text" id="url2" value="Year" /> <input type=
-      "button" value="Submit" onclick="loadUrl();" />
-    </form>
-
-    <div align="center">
-      <div>
-        <iframe id="urlView" height="800" width="800" borders="none" allowtransparency=
-        "true"></iframe>
-      </div>
-
-      <h2><a href="http://ofneal.com">by Neal BasuMullick 2011</a></h2>
-    </div>
-  </div>
+<h1 align="center">Annual Report Viewer</h1>
+<div align="center">
+  <form align="center">
+		<input onchange="javascript:this.value=this.value.toLowerCase();" type="text" id='' "url" value="Ticker"/><input type="text" id="url2" value="Year"/><input type='' "button" value="Submit" onclick="loadUrl();"/>
+	</form>
+	<div align="center">
+		<div>
+			<iframe id="urlView" height="800" width="800" borders="none" allowtransparency='' "true">
+			</iframe>
+		</div>
+		<h2><a href="http://ofneal.com">by Neal BasuMullick 2011</a></h2>
+	</div>
+</div>
 </body>
 </html>
